--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
     margin: 0;
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
-  }
-  .compass-container {
+}
+
+.compass-container {
     position: relative;
     width: 200px;
     height: 200px;
@@ -18,27 +19,36 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  .compass-needle {
+}
+
+.compass-needle {
     position: absolute;
     width: 5px;
     height: 80px;
     background-color: #e63946;
     bottom: 50%;
-    left: 50%; 
-    transform-origin: bottom center; 
+    left: 50%;
+    transform-origin: bottom center;
     transform: translate(-50%, 0) rotate(0deg);
-  }
-  .angle-display {
+}
+
+.angle-display {
     margin-top: 20px;
     font-size: 18px;
     color: #333;
-  }
-  .slider-container {
+}
+
+.slider-container {
     margin-top: 20px;
     display: flex;
     align-items: center;
-  }
-  input[type="range"] {
+}
+
+input[type="range"] {
     margin-left: 10px;
-  }
+}
+
+.direction-label {
+    display: inline-block;
+    font-size: 16px;
+}
